fix the overflow of the second flipping card, fix the alignment of the texts in contact info section in contact.html

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -14,8 +14,10 @@ body {
 
   font-family: 'Nunito Sans', sans-serif;
   background-color: #EAE8ED;
-  perspective: 40rem;
-  -webkit-perspective: 40rem;
+  perspective: 50rem;
+  -webkit-perspective: 50rem;
+  -moz-perspective: 50rem;
+  -moz-perspective: 50rem;
  
 }
 
@@ -295,6 +297,7 @@ a:hover {
   -webkit-transform-style: preserve-3d;
   -o-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
+  max-width: 100%;
 }
 
 .card-flip.flipped .card-body-flip {
